--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.7'
 services:
   web:
     build: .
-    image: nohossat1/flask-example-cv-1
+    image: nohossat1/flask-login
     ports:
     - "5000:5000"
